--- a/angular.json
+++ b/angular.json
@@ -50,7 +50,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "test-list-contacts:build"
+            "browserTarget": "test-list-contacts:build",
+            "port": 4300
           },
           "configurations": {
             "production": {
