--- a/angular.json
+++ b/angular.json
@@ -50,8 +50,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "test-list-contacts:build",
-            "port": 4300
+            "browserTarget": "test-list-contacts:build"
           },
           "configurations": {
             "production": {
